--- a/fashion_blog_exercise/fashion_blog_no_markup_starter/css/style.css
+++ b/fashion_blog_exercise/fashion_blog_no_markup_starter/css/style.css
@@ -1,24 +1,78 @@
 body {
 
 }
-.wrapper {
+#container {
   width: 960px;
   margin: 0 auto;
   font-family: 'Lato', sans-serif;
   font-size: 18px;
   line-height: 1.5;
 }
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  /* both above are overriding browser default, h's usually have big margins and padding */
+}
+
 header {
-position: relative;
-
+height: 200px;
+margin-top: 100px;
 }
 
-h1 {
-  font-size: 64;
+header h1 {
+  font-size: 3em;
+  display: inline-block;
+  margin-right: .5em;
+  float:left;
+  color:red;
+  text-decoration: none;
+  font-weight: normal;
+  vertical-align: bottom;
+}
+/* Why do you need to include a? */
+
+header h1 a{
+  color:red;
+  text-decoration: none;
 }
 
-h2 {
-  font-size: 24;
+header h2 {
+  display: inline-block;
+  float:left;
+  font-size: 1.5em;
+  margin-top: 1em;
+  color: #888;
+  vertical-align: bottom;
+}
+
+h3 {
+  color:#666666;
+}
+nav {
+  clear: left;
+}
+
+header nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+header nav ul li {
+  float: left;
+  width: 16.66667%;
+  margin: 0;
+  padding: 0;
+
+}
+header nav a {
+  display: block;
+  font-size: 1.25em;
+  margin-right: 1px;
+  padding: 15px 0;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  background: black;
 }
 
 logo {
@@ -27,12 +81,41 @@ logo {
   color: red;
   float:left;
   vertical-align: text-bottom;
+
 }
 tagline {
   margin-left: 10px;
   float: left;
   vertical-align: text-bottom;
 }
-nav {
-  clear: left;
+main {
+  float:left;
+  width: 66%;
+}
+
+aside {
+  float:right;
+  width: 30%;
+  padding: 10px;
+}
+#popular a {
+  color:red;
+}
+footer {
+  clear:both;
+}
+img {
+  margin: 10px 0;
+  max-width: 100%;
+}
+article a {
+  float:right;
+  color:red;
+  text-decoration: none;
+  font-style: bold;
+}
+
+footer a {
+  color:red;
+  text-decoration: none;
 }
